--- a/hb_robot_description/CMakeLists.txt
+++ b/hb_robot_description/CMakeLists.txt
@@ -10,7 +10,11 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
-install(DIRECTORY rviz launch meshes urdf DESTINATION share/${PROJECT_NAME})
+install(
+  DIRECTORY launch meshes rviz urdf
+  DESTINATION share/${PROJECT_NAME}
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
